--- a/style.css
+++ b/style.css
@@ -26,18 +26,18 @@
 .eye {
     position: absolute;
     width: 50px;
-    height: 20px;
+    height: 20px;  
     background: white;
-    top: 18px;
+    top: 18px;     
     clip-path: path('M25,0 C35,0 45,3 50,10 C45,17 35,20 25,20 C15,20 5,17 0,10 C5,3 15,0 25,0');
 }
 
-.eye.left {
+.eye.left { 
     right: 40px;
     transform: rotate(-20deg);
 }
 
-.eye.right {
+.eye.right { 
     left: 40px;
     transform: rotate(20deg);
 }
@@ -46,43 +46,41 @@
     position: absolute;
     width: 110px;
     height: 35px;
-    border-top: 3px solid #556B2F;
+    border-top: 3px solid #556B2F; 
     border-bottom: none;
-    border-radius: 70% 70% 0 0;
+    border-radius: 70% 70% 0 0; 
     background-color: #32CD32;
     top: 90px;
     left: 35px;
-    z-index: 1;
 }
 
 .mouth {
     position: absolute;
-    width: 80px;
-    height: 30px;
-    top: 20px;
-    left: 50px;
+    width: 80px;     
+    height: 30px;    
+    bottom: 20px;
+    left: 50px;      
     background: black;
-    border-radius: 0 0 45px 45px;
+    border-radius: 0 0 45px 45px;  
     overflow: hidden;
-    z-index: 2;
 }
 
 .teeth {
     position: absolute;
     width: 100%;
-    height: 12px;
+    height: 12px;    
     background: white;
     top: 0;
 }
 
 .inner-mouth {
     position: absolute;
-    width: 60px;
-    height: 25px;
+    width: 60px;     
+    height: 25px;    
     bottom: -5px;
     left: 15px;
     background: #FF6347;
-    border-radius: 40px 40px 0 0;
+    border-radius: 40px 40px 0px 0px;  
 }
 
 .turtle:nth-child(1) .mask {
@@ -105,7 +103,7 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 5px; 
     top: -5px;
 }
 
@@ -141,12 +139,12 @@
 }
 
 .turtle:nth-child(2) .triangle-bottom {
-    border-width: 30px 0 0 30px;
+    border-width: 30px 0px 0px 30px;
     border-color: #FFA500 transparent transparent transparent;
 }
 
 .turtle:nth-child(3) .triangle-top {
-    border-width: 30px 0 0 30px;
+    border-width: 30px 0px 0px 30px;
     border-color: transparent transparent transparent #1E90FF;
 }
 
@@ -161,6 +159,6 @@
 }
 
 .turtle:nth-child(4) .triangle-bottom {
-    border-width: 30px 0 0 30px;
+    border-width: 30px 0px 0px 30px;
     border-color: #800080 transparent transparent transparent;
 }
